
icon:check[] REST: The `/health/live` and `/health/ready` endpoints have been added to the REST API. These endpoints are also available on the monitoring server, but adding them to the REST server makes it possible for load balancers to monitor the server on the same port that used to proxy the requests.

icon:plus[] Core: The core Vert.x library was updated to version `3.8.4`.

icon:plus[] Core: The core plugin framework library was updated to version `2.1.0`.

icon:plus[] Security: Build artifacts for Gentics Mesh will now be cryptographically signed using GPG.

[[v1.2.1]]
== 1.2.1 (22.11.2019)

icon:check[] Core: Mesh now uses a different parser for processing `*.docx` and `*.pptx` files. Parsing these files will now require far less memory.

icon:check[] GraphQL: Fixed fetching node references from users. link:https://github.com/gentics/mesh/issues/393[#393] link:https://github.com/gentics/mesh/issues/934[#934]

icon:check[] Java Rest Client: Fixed a bug that some generic methods would not allow response objects of any class.


[[v1.2.0]]
== 1.2.0 (20.11.2019)

WARNING: The internal database structure has changed significantly to avoid vertices with many edges. This will result in a higher write performance on bigger systems. For this change, the API of Gentics Mesh did not change at all. When starting with this version on an existing database, the structure changes will be applied automatically, which will take some time to complete.

CAUTION: If you are running Gentics Mesh in cluster mode, you need to link:{{< relref "clustering.asciidoc" >}}#_setup[initialize the cluster again]. You must use the `-initCluster` command line argument or set the `MESH_CLUSTER_INIT` to `true` on one of the master instances of the cluster.

icon:check[] Java Rest Client: Generic methods (`get`, `post`, `put`, `delete`) now allow response objects of any class.
